--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Visit Namibia a website for people who are planning on visiting Namibia">
     <meta name="keywords" content="Namibia, travel, tourist, Africa, Safari, airport shuttle, flights">
 
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>Visit Namibia</title>
 </head>
 
