--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-    <p>Hello World!</p>
+    <header>This is where my log and menu will go</header>
+    <section>this is a section</section>
+    <footer>contact details and social network links will be here</footer>
 </body>
 
 </html>
