add a logo and navigation menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
 </head>
 
 <body>
-    <header>This is where my log and menu will go</header>
+    <header>
+        <a href="index.html">
+            <h1>Visit Namibia</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Attractions</a>
+                </li>
+                <li>
+                    <a href="#">Book</a>
+                </li>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+            </ul>
+        </nav>                                                                                                                                                                                                                                                                                                                                                                                                                               "
+    </header>
     <section>this is a section</section>
     <footer>contact details and social network links will be here</footer>
 </body>
