add style to log and nav

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Visit Namibia</h1>
+            <h1 id="logo">Visit Namibia</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="nav-menu">
                 <li>
                     <a href="#">Gallery</a>
                 </li>
