add font style to body, h1, and h2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#">Book</a>
                 </li>
                 <li>
-                    <a href="#">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>                                                                                                                                                                                                                                                                                                                                                                                                                               "
