add a hero image

--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
-        </nav>                                                                                                                                                                                                                                                                                                                                                                                                                               "
+        </nav>                                                                                                                                                                                                                                                                                                  
     </header>
-    <section>this is a section</section>
+    <section id="main-image-outer">
+        <div id="main-image"></div>
+    </section>
+    <section>
+        <div>this is the general info section</div>
+    </section>
     <footer>contact details and social network links will be here</footer>
 </body>
 
