--- a/index.html
+++ b/index.html
@@ -32,14 +32,65 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
-        </nav>                                                                                                                                                                                                                                                                                                  
+        </nav>
     </header>
+
     <section id="main-image-outer">
         <div id="main-image"></div>
     </section>
-    <section>
-        <div>this is the general info section</div>
+
+    <section id="home-info">
+        <h2>About Namibia</h2>
+        <div id="weather">
+            <div class="right-side">
+                <h2>Typical weather</h2>
+                <p>Namibia is mostly high plateau
+
+                    Along the West coast is the Namib Desert
+
+                    To the East is the Kalahari Desert
+
+                    The northern border is a flat area,with the Kunene river drawing the boarder line between Namibia
+                    and Angola. This part has been designated by the the World Wildlife Fund as part of the Angolan
+                    Mompane Woodland Eco-region.
+
+                    While the Orange River divides the Namibian and South African boarder.</p>
+            </div>
+        </div>
+        <div id="time">
+            <div class="right-side">
+                <h2>Best time to visit</h2>
+                <p>Namibia is mostly high plateau
+
+                    Along the West coast is the Namib Desert
+
+                    To the East is the Kalahari Desert
+
+                    The northern border is a flat area,with the Kunene river drawing the boarder line between Namibia
+                    and Angola. This part has been designated by the the World Wildlife Fund as part of the Angolan
+                    Mompane Woodland Eco-region.
+
+                    While the Orange River divides the Namibian and South African boarder.</p>
+            </div>
+        </div>
+        <div id="location">
+            <div >
+                <h2>Location</h2>
+                <p>Namibia is mostly high plateau
+
+                    Along the West coast is the Namib Desert
+
+                    To the East is the Kalahari Desert
+
+                    The northern border is a flat area,with the Kunene river drawing the boarder line between Namibia
+                    and Angola. This part has been designated by the the World Wildlife Fund as part of the Angolan
+                    Mompane Woodland Eco-region.
+
+                    While the Orange River divides the Namibian and South African boarder.</p>
+            </div>
+        </div>
     </section>
+
     <footer>
         <ul class="social-networks">
             <li>
