add style to change postion of about

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!-- logo and navigation menu  -->
     <header>
         <a href="index.html">
             <h1 id="logo">Visit Namibia</h1>
@@ -35,12 +36,12 @@
         </nav>
     </header>
 
-    <section id="main-image-outer">
-        <div id="main-image"></div>
-    </section>
+    <!-- image and about section  -->
 
     <section id="home-info">
-        <h2>About Namibia</h2>
+        <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
+            alt="a picture of a rhino standing in the wild">
+        <h2 id="about-namibia">About Namibia</h2>
         <div id="weather">
             <div class="right-side">
                 <h2>Typical weather</h2>
@@ -74,7 +75,7 @@
             </div>
         </div>
         <div id="location">
-            <div >
+            <div>
                 <h2>Location</h2>
                 <p>Namibia is mostly high plateau
 
@@ -89,7 +90,23 @@
                     While the Orange River divides the Namibian and South African boarder.</p>
             </div>
         </div>
+        <div id="Languages">
+            <div class="right-side">
+                <h2>Languages Spoken</h2>
+                <p>Namibia is mostly high plateau
+
+                    Along the West coast is the Namib Desert
+
+                    To the East is the Kalahari Desert
+
+                    The northern border is a flat area,with the Kunene river drawing the boarder line between Namibia
+                    and Angola. This part has been designated by the the World Wildlife Fund as part of the Angolan
+                    Mompane Woodland Eco-region.
+
+                    While the Orange River divides the Namibian and South African boarder.</p>
+            </div>
     </section>
+
 
     <footer>
         <ul class="social-networks">
