--- a/index.html
+++ b/index.html
@@ -42,15 +42,13 @@
         <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
             alt="a picture of a rhino standing in the wild">
         <h2 id="about-namibia">About Namibia</h2>
+        <hr>
         <div id="weather">
             <div class="right-side">
                 <h2>Typical weather</h2>
                 <p>Namibia is mostly high plateau
-
                     Along the West coast is the Namib Desert
-
                     To the East is the Kalahari Desert
-
                     The northern border is a flat area,with the Kunene river drawing the boarder line between Namibia
                     and Angola. This part has been designated by the the World Wildlife Fund as part of the Angolan
                     Mompane Woodland Eco-region.
@@ -62,35 +60,27 @@
             <div class="right-side">
                 <h2>Best time to visit</h2>
                 <p>Namibia is mostly high plateau
-
                     Along the West coast is the Namib Desert
-
                     To the East is the Kalahari Desert
-
                     The northern border is a flat area,with the Kunene river drawing the boarder line between Namibia
                     and Angola. This part has been designated by the the World Wildlife Fund as part of the Angolan
                     Mompane Woodland Eco-region.
-
                     While the Orange River divides the Namibian and South African boarder.</p>
             </div>
         </div>
         <div id="location">
-            <div>
+            <div class="right-side">
                 <h2>Location</h2>
                 <p>Namibia is mostly high plateau
-
                     Along the West coast is the Namib Desert
-
                     To the East is the Kalahari Desert
-
                     The northern border is a flat area,with the Kunene river drawing the boarder line between Namibia
                     and Angola. This part has been designated by the the World Wildlife Fund as part of the Angolan
                     Mompane Woodland Eco-region.
-
                     While the Orange River divides the Namibian and South African boarder.</p>
             </div>
         </div>
-        <div id="Languages">
+        <!-- <div id="Languages">
             <div class="right-side">
                 <h2>Languages Spoken</h2>
                 <p>Namibia is mostly high plateau
@@ -104,7 +94,7 @@
                     Mompane Woodland Eco-region.
 
                     While the Orange River divides the Namibian and South African boarder.</p>
-            </div>
+            </div> -->
     </section>
 
 
