--- a/index.html
+++ b/index.html
@@ -46,38 +46,31 @@
         <div id="weather">
             <div class="right-side">
                 <h2>Typical weather</h2>
-                <p>Namibia is mostly high plateau
-                    Along the West coast is the Namib Desert
-                    To the East is the Kalahari Desert
-                    The northern border is a flat area,with the Kunene river drawing the boarder line between Namibia
-                    and Angola. This part has been designated by the the World Wildlife Fund as part of the Angolan
-                    Mompane Woodland Eco-region.
-
-                    While the Orange River divides the Namibian and South African boarder.</p>
+                <p> Ave Temperature: 30º C</p>
+                <br>
+                <p>Ave Humidity: 12%</p>
+                <br>
+                <p>Mostly Sunny</p>
             </div>
         </div>
         <div id="time">
             <div class="right-side">
-                <h2>Best time to visit</h2>
-                <p>Namibia is mostly high plateau
-                    Along the West coast is the Namib Desert
-                    To the East is the Kalahari Desert
-                    The northern border is a flat area,with the Kunene river drawing the boarder line between Namibia
-                    and Angola. This part has been designated by the the World Wildlife Fund as part of the Angolan
-                    Mompane Woodland Eco-region.
-                    While the Orange River divides the Namibian and South African boarder.</p>
+                <h2 class="about-headings">Best time to visit</h2>
+                <p> Season: Summer</p>
+                <br>
+                <p>Month: December/January</p>
+                <br>
+                <p>But every season comes with its own gems</p>
             </div>
         </div>
         <div id="location">
             <div class="right-side">
                 <h2>Location</h2>
-                <p>Namibia is mostly high plateau
-                    Along the West coast is the Namib Desert
-                    To the East is the Kalahari Desert
-                    The northern border is a flat area,with the Kunene river drawing the boarder line between Namibia
-                    and Angola. This part has been designated by the the World Wildlife Fund as part of the Angolan
-                    Mompane Woodland Eco-region.
-                    While the Orange River divides the Namibian and South African boarder.</p>
+                <p> Coordinates: 22.9576° S, 18.4904° E</p>
+                <br>
+                <p>Continent: Africa</p>
+                <br>
+                <p>Region: SADC (Southern African Development Community) </p>
             </div>
         </div>
         <!-- <div id="Languages">
