add galler html, gallery link and ictures to gallery

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <ul id="nav-menu">
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html" class="active">Gallery</a>
                 </li>
                 <li>
                     <a href="#">Attractions</a>
