--- a/gallery.html
+++ b/gallery.html
@@ -37,22 +37,42 @@
     </header>
 
     <!-- gallery section  -->
-    <section id = "video" >
+    <!-- <section id="video">
         <div>
-            video 
+            video
         </div>
-    </section>
+    </section> -->
 
     <section id="pictures">
         <div class="gallery">
-            <img src="assets/images/Webp.net-resizeimage (1).jpg" alt="bird">
-            <img src="assets/images/Webp.net-resizeimage (2).jpg" alt="Northern Lights">
-            <img src="assets/images/Webp.net-resizeimage (3).jpg" alt="Mountains">
-            <img src="assets/images/Untitled-3.jpg" alt="Mountains">
-            <img src="assets/images/Untitled-4.jpg" alt="Mountains">
-            <img src="assets/images/Untitled-6.jpg" alt="Mountains">
-            <img src="assets/images/Untitled-7.jpg" alt="Mountains">
-            
+            <div class="row">
+                <img src="assets/images/Webp.net-resizeimage (1).jpg" alt="a rhino in the wild">
+                <img src="assets/images/Webp.net-resizeimage (2).jpg" alt="a spider on a spider web">
+                <img src="assets/images/Webp.net-resizeimage (3).jpg" alt="henya taking bath at a waterwhole">
+            </div>
+            <div class="row">
+                <img src="assets/images/Webp.net-resizeimage (4).jpg" alt="pale chanting goshawk on a branch">
+                <img src="assets/images/Webp.net-resizeimage (5).jpg" alt="spring-bok at the waterwhole">
+                <img src="assets/images/Webp.net-resizeimage (6).jpg" alt="Mountains">
+            </div>
+
+            <div class="row">
+                <img src="assets/images/Webp.net-resizeimage (7).jpg" alt="Mountains">
+                <img src="assets/images/Webp.net-resizeimage (8).jpg" alt="Mountains">
+                <img src="assets/images/Webp.net-resizeimage (9).jpg" alt="Mountains">
+            </div>
+
+            <div class="row">
+                <img src="assets/images/Webp.net-resizeimage (10).jpg" alt="Mountains">
+                <img src="assets/images/Webp.net-resizeimage (11).jpg" alt="Mountains">
+                <!-- <img src="assets/images/Webp.net-resizeimage (12.jpg" alt="Mountains"> -->
+            </div>
+
+            <div class="row">
+                <img src="assets/images/Webp.net-resizeimage (13).jpg" alt="Mountains">
+                <img src="assets/images/Webp.net-resizeimage (14).jpg" alt="Mountains">
+                <img src="assets/images/Webp.net-resizeimage.jpg" alt="Mountains">
+            </div>
         </div>
 
     </section>
