--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <a href="gallery.html" class="active">Gallery</a>
                 </li>
                 <li>
-                    <a href="#">Attractions</a>
+                    <a href="attractions.html" class="active">Attractions</a>
                 </li>
                 <li>
-                    <a href="#">Book</a>
+                    <a href="book.html" class="active">Book</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
