--- a/attractions.html
+++ b/attractions.html
@@ -36,9 +36,48 @@
         </nav>
     </header>
 
-<section>shuttle booking</section>
-<section>Book safari</section>
-<section>Flight booking</section>
+    
+    <section id="home-info">
+        <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
+            alt="a picture of a rhino standing in the wild">
+        <h2 id="about-namibia">Namibian Attractions</h2>
+        <p>Namibia has many attractions to offer! With a vast landscape, diverser wildlife, multiple cultures, and amazing sunsets.</p>
+        <p>The must see places are: Swakopmund, Windhoek, and Etosha</p>
+        <hr>
+        <div id="weather">
+            <div class="right-side">
+                <h2>Typical weather</h2>
+                <p> Ave Temperature: 30º C</p>
+                <br>
+                <p>Ave Humidity: 12%</p>
+                <br>
+                <p>Mostly Sunny</p>
+            </div>
+        </div>
+        <div id="time">
+            <div class="right-side">
+                <h2 class="about-headings">Best time to visit</h2>
+                <p> Season: Summer</p>
+                <br>
+                <p>Month: December/January</p>
+                <br>
+                <p>But every season comes with its own gems</p>
+            </div>
+        </div>
+        <div id="location">
+            <div class="right-side">
+                <h2>Location</h2>
+                <p> Coordinates: 22.9576° S, 18.4904° E</p>
+                <br>
+                <p>Continent: Africa</p>
+                <br>
+                <p>Region: SADC (Southern African Development Community) </p>
+            </div>
+        </div>
+     
+    </section>
+
+
     <footer>
         <ul class="social-networks">
             <li>
