add style to attraction

--- a/attractions.html
+++ b/attractions.html
@@ -36,27 +36,37 @@
         </nav>
     </header>
 
-    
-    <section id="home-info">
-        <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
-            alt="a picture of a rhino standing in the wild">
-        <h2 id="about-namibia">Namibian Attractions</h2>
-        <p>Namibia has many attractions to offer! With a vast landscape, diverser wildlife, multiple cultures, and amazing sunsets.</p>
-        <p>The must see places are: Swakopmund, Windhoek, and Etosha</p>
+
+    <section id="attraction-page">
+
+        <div id="attraction-img">
+            <img src="/assets/images/Webp.net-resizeimage (4).jpg" id="attraction-main-image"
+                alt="a picture of a rhino standing in the wild">
+        </div>
+
+        <div id="attractions-intro">
+            <h2>Namibian Attractions</h2>
+            <p>Namibia has many attractions to offer! With a vast landscape, diverser wildlife, multiple cultures, and
+                amazing sunsets.</p>
+            <p>The must see places are: Swakopmund, Windhoek, and Etosha</p>
+        </div>
+
         <hr>
-        <div id="weather">
-            <div class="right-side">
-                <h2>Typical weather</h2>
+<section>
+        <!-- <div id="etosha"> -->
+            <div class="attraction-details">
+                <h2>Etosha</h2>
                 <p> Ave Temperature: 30º C</p>
                 <br>
                 <p>Ave Humidity: 12%</p>
                 <br>
                 <p>Mostly Sunny</p>
             </div>
-        </div>
-        <div id="time">
-            <div class="right-side">
-                <h2 class="about-headings">Best time to visit</h2>
+        <!-- </div> -->
+</section>
+        <div id="Windhoek">
+            <div class="attraction-details">
+                <h2 class="about-headings">Windhoek</h2>
                 <p> Season: Summer</p>
                 <br>
                 <p>Month: December/January</p>
@@ -64,9 +74,9 @@
                 <p>But every season comes with its own gems</p>
             </div>
         </div>
-        <div id="location">
-            <div class="right-side">
-                <h2>Location</h2>
+        <div id="Swakopmund">
+            <div class="attraction-details">
+                <h2>Swakopmund</h2>
                 <p> Coordinates: 22.9576° S, 18.4904° E</p>
                 <br>
                 <p>Continent: Africa</p>
@@ -74,7 +84,8 @@
                 <p>Region: SADC (Southern African Development Community) </p>
             </div>
         </div>
-     
+        </section>
+
     </section>
 
 
