add style to attractions

--- a/attractions.html
+++ b/attractions.html
@@ -52,9 +52,9 @@
         </div>
 
         <hr>
-<section>
-        <!-- <div id="etosha"> -->
-            <div class="attraction-details">
+
+        <div id="attraction-details">
+            <div class="etosha">
                 <h2>Etosha</h2>
                 <p> Ave Temperature: 30º C</p>
                 <br>
@@ -62,10 +62,9 @@
                 <br>
                 <p>Mostly Sunny</p>
             </div>
-        <!-- </div> -->
-</section>
-        <div id="Windhoek">
-            <div class="attraction-details">
+        </div>
+        <div id="attraction-details">
+            <div class="Windhoek">
                 <h2 class="about-headings">Windhoek</h2>
                 <p> Season: Summer</p>
                 <br>
@@ -74,8 +73,8 @@
                 <p>But every season comes with its own gems</p>
             </div>
         </div>
-        <div id="Swakopmund">
-            <div class="attraction-details">
+        <div id="attraction-details">
+            <div class="Swakopmund">
                 <h2>Swakopmund</h2>
                 <p> Coordinates: 22.9576° S, 18.4904° E</p>
                 <br>
@@ -84,7 +83,6 @@
                 <p>Region: SADC (Southern African Development Community) </p>
             </div>
         </div>
-        </section>
 
     </section>
 
