add positioning to attraction layout

--- a/attractions.html
+++ b/attractions.html
@@ -53,7 +53,7 @@
 
         <hr>
 
-        <div id="attraction-details">
+        <div class="etosha-div">
             <div class="etosha">
                 <h2>Etosha</h2>
                 <p> Ave Temperature: 30º C</p>
@@ -63,9 +63,9 @@
                 <p>Mostly Sunny</p>
             </div>
         </div>
-        <div id="attraction-details">
-            <div class="Windhoek">
-                <h2 class="about-headings">Windhoek</h2>
+        <div class="attraction-details">
+            <div class="windhoek">
+                <h2>Windhoek</h2>
                 <p> Season: Summer</p>
                 <br>
                 <p>Month: December/January</p>
@@ -73,8 +73,8 @@
                 <p>But every season comes with its own gems</p>
             </div>
         </div>
-        <div id="attraction-details">
-            <div class="Swakopmund">
+        <div class="attraction-details">
+            <div class="swakopmund">
                 <h2>Swakopmund</h2>
                 <p> Coordinates: 22.9576° S, 18.4904° E</p>
                 <br>
