add new potion to attraction layout

--- a/attractions.html
+++ b/attractions.html
@@ -53,7 +53,8 @@
 
         <hr>
 
-        <div class="etosha-div">
+        <div id="attractions-main">
+
             <div class="etosha">
                 <h2>Etosha</h2>
                 <p> Ave Temperature: 30º C</p>
@@ -62,8 +63,7 @@
                 <br>
                 <p>Mostly Sunny</p>
             </div>
-        </div>
-        <div class="attraction-details">
+    
             <div class="windhoek">
                 <h2>Windhoek</h2>
                 <p> Season: Summer</p>
@@ -72,8 +72,8 @@
                 <br>
                 <p>But every season comes with its own gems</p>
             </div>
-        </div>
-        <div class="attraction-details">
+
+    
             <div class="swakopmund">
                 <h2>Swakopmund</h2>
                 <p> Coordinates: 22.9576° S, 18.4904° E</p>
