add style to postion of text

--- a/index.html
+++ b/index.html
@@ -39,12 +39,22 @@
     <!-- image and about section  -->
 
     <section id="home-info">
-        <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
-            alt="a picture of a rhino standing in the wild">
-        <h2 id="about-namibia">About Namibia</h2>
-        <hr>
-        <div id="weather">
-            <div class="right-side">
+
+        <div id="home-image">
+            <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
+                alt="a picture of a rhino standing in the wild">
+        </div>
+
+        <div id="about-namibia">
+            <h2>About Namibia</h2>
+            <p>Namibia has many attractions to offer! With a vast landscape, diverser wildlife, multiple cultures, and
+                amazing sunsets.</p>
+            <p>The must see places are: Swakopmund, Windhoek, and Etosha</p>
+        </div>
+
+        <div id="home-main">
+
+            <div class="weather">
                 <h2>Typical weather</h2>
                 <p> Ave Temperature: 30º C</p>
                 <br>
@@ -52,19 +62,19 @@
                 <br>
                 <p>Mostly Sunny</p>
             </div>
-        </div>
-        <div id="time">
-            <div class="right-side">
-                <h2 class="about-headings">Best time to visit</h2>
+
+
+            <div class="time">
+                <h2>Best time to visit</h2>
                 <p> Season: Summer</p>
                 <br>
                 <p>Month: December/January</p>
                 <br>
                 <p>But every season comes with its own gems</p>
             </div>
-        </div>
-        <div id="location">
-            <div class="right-side">
+
+
+            <div class="location">
                 <h2>Location</h2>
                 <p> Coordinates: 22.9576° S, 18.4904° E</p>
                 <br>
@@ -72,8 +82,9 @@
                 <br>
                 <p>Region: SADC (Southern African Development Community) </p>
             </div>
+
         </div>
-     
+
     </section>
 
 
