--- a/book.html
+++ b/book.html
@@ -36,9 +36,49 @@
         </nav>
     </header>
 
-    <section>shuttle booking</section>
-    <section>Book safari</section>
-    <section>Flight booking</section>
+    <section class="booking-main">
+        <div class="booking-image">
+            <img src="/assets/images/Webp.net-resizeimage (1).jpg" alt="" id="shuttle-image">
+        </div>
+        <div class="booking-form">
+            <div id="shuttle-booking-form">
+                <h2>Book your airport shuttle today!</h2>
+                <p>we offer cheap and reliable transport to and from the airport</p>
+                <br>
+                <form action="reserver.shuttle" method="POST">
+                    <div class="cient-details">
+                        <label for="name">Enter Name</label>
+                        <input type="text" id="name" name="passenger_name" placeholder="Happy Traveler" required>
+                    </div>
+                    <div class="cient-details">
+                        <label for="email">Enter Email</label>
+                        <input type="email" id="email" name="passenger_email" placeholder="happytraveler@email.com" required>
+                    </div>
+                    <div class="cient-details">
+                        <label for="number_of_passengers">number of passengers</label>
+                        <input type="number" id="email" name="number_of_passengers" placeholder="4" min="1" max="11" required>
+                    </div>
+                    <div class="cient-details">
+                        <label for="date">pick up time</label>
+                        <input type="datetime-local" id="date" name="passenger_pickup_time" placeholder="dd mm yy --:--" required>
+                    </div>
+                    <div class="cient-details">
+                        <label for="drop_city">Drop-off Details(city)</label>
+                        <input type="city" id="drop_city" name="drop_off_city" placeholder="City" required>
+                    </div>
+                    <div class="cient-details">
+                        <label for="drop_street">Drop-off Details(city)</label>
+                        <input type="street" id="drop_street" name="drop_off_street" placeholder="Street" required>
+                    </div>
+                    <div class="cient-details">
+                        <label for="drop_address">Enter Name of Hotel or House Number</label>
+                        <input type="text" id="drop_address" name="passenger_final destination" placeholder="Hotel Name or House No" required>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <ul class="social-networks">
             <li>
