add style to input, select and text

--- a/book.html
+++ b/book.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="cient-details">
                         <label for="number_of_passengers">number of passengers</label>
-                        <input type="number" id="email" name="number_of_passengers" placeholder="4" min="1" max="11" required>
+                        <input type="number" id="number_of_passengers" name="number_of_passengers" placeholder="4" min="1" max="11" required>
                     </div>
                     <div class="cient-details">
                         <label for="date">pick up time</label>
@@ -67,12 +67,15 @@
                         <input type="city" id="drop_city" name="drop_off_city" placeholder="City" required>
                     </div>
                     <div class="cient-details">
-                        <label for="drop_street">Drop-off Details(city)</label>
+                        <label for="drop_street">Drop-off Details(street)</label>
                         <input type="street" id="drop_street" name="drop_off_street" placeholder="Street" required>
                     </div>
                     <div class="cient-details">
                         <label for="drop_address">Enter Name of Hotel or House Number</label>
                         <input type="text" id="drop_address" name="passenger_final destination" placeholder="Hotel Name or House No" required>
+                    </div>
+                    <div class="cient-details">
+                        <button type="submit">Book The Rooms</button>
                     </div>
                 </form>
             </div>
