add styling to form and text

--- a/book.html
+++ b/book.html
@@ -47,19 +47,19 @@
                 <br>
                 <form action="reserver.shuttle" method="POST">
                     <div class="cient-details">
-                        <label for="name">Enter Name</label>
+                        <label for="name">Enter Name:</label>
                         <input type="text" id="name" name="passenger_name" placeholder="Happy Traveler" required>
                     </div>
                     <div class="cient-details">
-                        <label for="email">Enter Email</label>
+                        <label for="email">Enter Email:</label>
                         <input type="email" id="email" name="passenger_email" placeholder="happytraveler@email.com" required>
                     </div>
                     <div class="cient-details">
-                        <label for="number_of_passengers">number of passengers</label>
+                        <label for="number_of_passengers">No of Passengers:</label>
                         <input type="number" id="number_of_passengers" name="number_of_passengers" placeholder="4" min="1" max="11" required>
                     </div>
                     <div class="cient-details">
-                        <label for="date">pick up time</label>
+                        <label for="date">Pick up time</label>
                         <input type="datetime-local" id="date" name="passenger_pickup_time" placeholder="dd mm yy --:--" required>
                     </div>
                     <div class="cient-details">
@@ -71,7 +71,7 @@
                         <input type="street" id="drop_street" name="drop_off_street" placeholder="Street" required>
                     </div>
                     <div class="cient-details">
-                        <label for="drop_address">Enter Name of Hotel or House Number</label>
+                        <label for="drop_address">Hotel Name or House No;</label>
                         <input type="text" id="drop_address" name="passenger_final destination" placeholder="Hotel Name or House No" required>
                     </div>
                     <div class="cient-details">
