add style to labe and input postion

--- a/book.html
+++ b/book.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="cient-details">
                         <label for="date">Pick up time</label>
-                        <input type="datetime-local" id="date" name="passenger_pickup_time" placeholder="dd mm yy --:--" required>
+                        <input type="datetime-local" id="date" name="passenger_pickup_time" placeholder="" required>
                     </div>
                     <div class="cient-details">
                         <label for="drop_city">Drop-off Details(city)</label>
