--- a/gallery.html
+++ b/gallery.html
@@ -24,13 +24,13 @@
                     <a href="gallery.html" class="active">Gallery</a>
                 </li>
                 <li>
-                    <a href="attractions.html" class="active">Attractions</a>
+                    <a href="attractions.html">Attractions</a>
                 </li>
                 <li>
-                    <a href="book.html" class="active">Book</a>
+                    <a href="book.html">Book</a>
                 </li>
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
