--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <nav>
             <ul id="nav-menu">
                 <li>
-                    <a href="gallery.html" class="active">Gallery</a>
+                    <a href="gallery.html" >Gallery</a>
                 </li>
                 <li>
-                    <a href="attractions.html" class="active">Attractions</a>
+                    <a href="attractions.html" >Attractions</a>
                 </li>
                 <li>
-                    <a href="book.html" class="active">Book</a>
+                    <a href="book.html">Book</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
