add style to height of main sections for all but gallery

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- image and about section  -->
 
-    <section id="home-info">
+    <section id="home-page">
 
         <div id="home-image">
             <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
