--- a/book.html
+++ b/book.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
 
-    <section class="booking-main">
+    <section class="booking-page">
         <div class="booking-image">
             <img src="/assets/images/Webp.net-resizeimage (1).jpg" alt="" id="shuttle-image">
         </div>
