add style to gallery layout

--- a/gallery.html
+++ b/gallery.html
@@ -37,14 +37,15 @@
     </header>
 
     <!-- gallery section  -->
-    <!-- <section id="video">
+    <section id="galler-page">
+    <sectiondiv class="gallery-video">
         <div>
-            video
+            <video src="/assets/video/IMG_7450.MOV" aria-label="this is a video" controls id="imapal-video">
         </div>
-    </section> -->
+    </section> 
 
     <section id="pictures">
-        <div class="gallery">
+        <div class="gallery-photos">
             <div class="row">
                 <img src="assets/images/Webp.net-resizeimage (1).jpg" alt="a rhino in the wild">
                 <img src="assets/images/Webp.net-resizeimage (2).jpg" alt="a spider on a spider web">
@@ -96,6 +97,7 @@
                     aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
             </li>
         </ul>
+    </section>
     </footer>
     <!-- font awesome script  -->
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
