--- a/gallery.html
+++ b/gallery.html
@@ -44,6 +44,10 @@
         </div>
     </section> 
 
+    <div id="gallery-text"> 
+        <h2>this is the gallery</h2>
+    </div>
+
     <section id="pictures">
         <div class="gallery-photos">
             <div class="row">
