add style, padding to video, and text

--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,8 @@
 
             <div id="gallery-text">
                 <h2>this is the gallery</h2>
-                <p>wordds eofnad f  fsam fmanfknas fsaknfkan</p>
+                <p>Namibia is know to be one of the most beautiful places on earth! <br>
+                    Enjoy these pictures by Inotila Nghaamwa show some of the gems that Namibia has to offer</p>
             </div>
 
             
