add style to home page layout

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <nav>
             <ul id="nav-menu">
                 <li>
-                    <a href="gallery.html" >Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="attractions.html" >Attractions</a>
+                    <a href="attractions.html">Attractions</a>
                 </li>
                 <li>
                     <a href="book.html">Book</a>
@@ -40,53 +40,54 @@
 
     <section id="home-page">
 
-        <div id="home-image">
-            <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
-                alt="a picture of a rhino standing in the wild">
-        </div>
+        <section id="home-container">
 
-        <div id="about-namibia">
-            <h2>About Namibia</h2>
-            <p>Namibia has many attractions to offer! With a vast landscape, diverser wildlife, multiple cultures, and
-                amazing sunsets.</p>
-            <p>The must see places are: Swakopmund, Windhoek, and Etosha</p>
-        </div>
-
-        <div id="home-main">
-
-            <div class="weather">
-                <h2>Typical weather</h2>
-                <p> Ave Temperature: 30º C</p>
-                <br>
-                <p>Ave Humidity: 12%</p>
-                <br>
-                <p>Mostly Sunny</p>
+            <div id="home-image">
+                <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
+                    alt="a picture of a rhino standing in the wild">
             </div>
 
+            <div id="about-namibia-text">
+                <h2>About Namibia</h2>
+                <p>Namibia has many attractions to offer! With a vast landscape, diverser wildlife, multiple cultures,
+                    and
+                    amazing sunsets.</p>
+                <p>The must see places are: Swakopmund, Windhoek, and Etosha</p>
 
-            <div class="time">
-                <h2>Best time to visit</h2>
-                <p> Season: Summer</p>
-                <br>
-                <p>Month: December/January</p>
-                <br>
-                <p>But every season comes with its own gems</p>
+                <div id="weather">
+                    <h2>Typical weather</h2>
+                    <p> Ave Temperature: 30º C</p>
+                    <br>
+                    <p>Ave Humidity: 12%</p>
+                    <br>
+                    <p>Mostly Sunny</p>
+                </div>
+
+
+                <div id="time">
+                    <h2>Best time to visit</h2>
+                    <p> Season: Summer</p>
+                    <br>
+                    <p>Month: December/January</p>
+                    <br>
+                    <p>But every season comes with its own gems</p>
+                </div>
+
+
+                <div id="location">
+                    <h2>Location</h2>
+                    <p> Coordinates: 22.9576° S, 18.4904° E</p>
+                    <br>
+                    <p>Continent: Africa</p>
+                    <br>
+                    <p>Region: SADC (Southern African Development Community) </p>
+                </div>
             </div>
-
-
-            <div class="location">
-                <h2>Location</h2>
-                <p> Coordinates: 22.9576° S, 18.4904° E</p>
-                <br>
-                <p>Continent: Africa</p>
-                <br>
-                <p>Region: SADC (Southern African Development Community) </p>
             </div>
+        </section>
 
-        </div>
 
     </section>
-
 
     <footer>
         <ul class="social-networks">
