--- a/index.html
+++ b/index.html
@@ -40,48 +40,48 @@
 
     <section id="home-page">
 
-            <div id="home-image">
-                <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
-                    alt="a picture of a rhino standing in the wild">
+        <div id="home-image">
+            <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
+                alt="a picture of a rhino standing in the wild">
+        </div>
+
+        <div id="about-namibia-text">
+            <h2>About Namibia</h2>
+            <p>Namibia is a country in the southwest of Africa and is known as one of the worlds most popular travel
+                destinations! This amazing country has plenty of history, which can be seen every where you go. With a
+                vast landscape, diverser wildlife, multiple
+                cultures, and amazing sunsets.</p>
+
+            <div id="weather">
+                <h2>Typical weather</h2>
+                <p> Ave Temperature: 30º C</p>
+                <br>
+                <p>Ave Humidity: 12%</p>
+                <br>
+                <p>Mostly Sunny</p>
             </div>
 
-            <div id="about-namibia-text">
-                <h2>About Namibia</h2>
-                <p>Namibia has many attractions to offer! With a vast landscape, diverser wildlife, multiple cultures,
-                    and
-                    amazing sunsets.</p>
-                <p>The must see places are: Swakopmund, Windhoek, and Etosha</p>
 
-                <div id="weather">
-                    <h2>Typical weather</h2>
-                    <p> Ave Temperature: 30º C</p>
-                    <br>
-                    <p>Ave Humidity: 12%</p>
-                    <br>
-                    <p>Mostly Sunny</p>
-                </div>
-
-
-                <div id="time">
-                    <h2>Best time to visit</h2>
-                    <p> Season: Summer</p>
-                    <br>
-                    <p>Month: December/January</p>
-                    <br>
-                    <p>But every season comes with its own gems</p>
-                </div>
-
-
-                <div id="location">
-                    <h2>Location</h2>
-                    <p> Coordinates: 22.9576° S, 18.4904° E</p>
-                    <br>
-                    <p>Continent: Africa</p>
-                    <br>
-                    <p>Region: SADC (Southern African Development Community) </p>
-                </div>
+            <div id="time">
+                <h2>Best time to visit</h2>
+                <p> Season: Summer</p>
+                <br>
+                <p>Month: December/January</p>
+                <br>
+                <p>But every season comes with its own gems</p>
             </div>
+
+
+            <div id="location">
+                <h2>Location</h2>
+                <p> Coordinates: 22.9576° S, 18.4904° E</p>
+                <br>
+                <p>Continent: Africa</p>
+                <br>
+                <p>Region: SADC (Southern African Development Community) </p>
             </div>
+        </div>
+        </div>
 
     </section>
 
