made paragraph of attraction page one instead of two

--- a/attractions.html
+++ b/attractions.html
@@ -47,8 +47,7 @@
         <div id="attractions-intro">
             <h2>Namibian Attractions</h2>
             <p>Namibia has many attractions to offer! With a vast landscape, diverser wildlife, multiple cultures, and
-                amazing sunsets.</p>
-            <p>The must see places are: Swakopmund, Windhoek, and Etosha</p>
+                amazing sunsets.The must see places are: Swakopmund, Windhoek, and Etosha</p>
         </div>
 
         <hr>
