add style to postion of  class=home-details

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 vast landscape, diverser wildlife, multiple
                 cultures, and amazing sunsets.</p>
 
-            <div id="weather">
+            <div id="weather"  class="home-details"> 
                 <h2>Typical weather</h2>
                 <p> Ave Temperature: 30º C</p>
                 <br>
@@ -61,7 +61,7 @@
                 <p>Mostly Sunny</p>
             </div>
             
-            <div id="time">
+            <div id="time"  class="home-details">
                 <h2>Best time to visit</h2>
                 <p> Season: Summer</p>
                 <br>
@@ -70,7 +70,7 @@
                 <p>But every season comes with its own gems</p>
             </div>
 
-            <div id="location">
+            <div id="location"  class="home-details">
                 <h2>Location</h2>
                 <p> Coordinates: 22.9576° S, 18.4904° E</p>
                 <br>
