--- a/attractions.html
+++ b/attractions.html
@@ -44,7 +44,7 @@
                 alt="a picture of a rhino standing in the wild">
         </div>
 
-        <div id="attractions-intro">
+        <div id="attractions-text">
             <h2>Namibian Attractions</h2>
             <p>Namibia has many attractions to offer! With a vast landscape, diverser wildlife, multiple cultures, and
                 amazing sunsets.The must see places are: Swakopmund, Windhoek, and Etosha</p>
@@ -63,7 +63,7 @@
                 <p>Mostly Sunny</p>
             </div>
     
-            <div class="windhoek">
+            <div class="windhoek" >
                 <h2>Windhoek</h2>
                 <p> Season: Summer</p>
                 <br>
