add extra text to home page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>Namibia is a country in the southwest of Africa and is known as one of the worlds most popular travel
                 destinations! This amazing country has plenty of history, which can be seen every where you go. With a
                 vast landscape, diverser wildlife, multiple
-                cultures, and amazing sunsets.</p>
+                cultures, and amazing sunsets. While Namibia has been independent as a country since 1990, it's colonial pass with both Germany and South Africa can still be seen in its infastracute and art. Furthermore, you will notice that a lot of the country speaks German and Afrikaans. Nevertheless, Namibians are very friendly people to all guest and will glady welcome you. Most of these lovely people speak English, and there are plenty of tourist centers to assits you. <a href="book.html">Book</a> your trip today!</p>
 
             <div id="weather"  class="home-details"> 
                 <h2>Typical weather</h2>
@@ -63,11 +63,11 @@
             
             <div id="time"  class="home-details">
                 <h2>Best time to visit</h2>
-                <p> Season: Summer</p>
-                <br>
                 <p>Month: December/January</p>
                 <br>
-                <p>But every season comes with its own gems</p>
+                <p> Season: Summer</p>
+                <br>
+                <p>NB! every season comes with its own gems</p>
             </div>
 
             <div id="location"  class="home-details">
@@ -76,7 +76,7 @@
                 <br>
                 <p>Continent: Africa</p>
                 <br>
-                <p>Region: SADC (Southern African Development Community) </p>
+                <p>Region: SADC </p>
             </div>
         </div>
         </div>
