--- a/index.html
+++ b/index.html
@@ -50,9 +50,19 @@
             <p>Namibia is a country in the southwest of Africa and is known as one of the worlds most popular travel
                 destinations! This amazing country has plenty of history, which can be seen every where you go. With a
                 vast landscape, diverser wildlife, multiple
-                cultures, and amazing sunsets. While Namibia has been independent as a country since 1990, it's colonial pass with both Germany and South Africa can still be seen in its infastracute and art. Furthermore, you will notice that a lot of the country speaks German and Afrikaans. Nevertheless, Namibians are very friendly people to all guest and will glady welcome you. Most of these lovely people speak English, and there are plenty of tourist centers to assits you. <a href="book.html">Book</a> your trip today!</p>
+                cultures, and amazing sunsets.
+                <br>
+                While Namibia has been independent as a country since 1990, it's colonial
+                pass with both Germany and South Africa can still be seen in its infastracute and art. Furthermore, you
+                will notice that a lot of the country speaks German and Afrikaans.
+                <br>
+                Nevertheless, Namibians are very
+                friendly people to all guest and will glady welcome you. Most of these lovely people speak English, and
+                there are plenty of tourist centers to assits you.
+                <br>
+                <a href="book.html">Book</a> your trip today!</p>
 
-            <div id="weather"  class="home-details"> 
+            <div id="weather" class="home-details">
                 <h2>Typical weather</h2>
                 <p> Ave Temperature: 30º C</p>
                 <br>
@@ -60,8 +70,8 @@
                 <br>
                 <p>Mostly Sunny</p>
             </div>
-            
-            <div id="time"  class="home-details">
+
+            <div id="time" class="home-details">
                 <h2>Best time to visit</h2>
                 <p>Month: December/January</p>
                 <br>
@@ -70,7 +80,7 @@
                 <p>NB! every season comes with its own gems</p>
             </div>
 
-            <div id="location"  class="home-details">
+            <div id="location" class="home-details">
                 <h2>Location</h2>
                 <p> Coordinates: 22.9576° S, 18.4904° E</p>
                 <br>
