add text and improve content

--- a/book.html
+++ b/book.html
@@ -44,7 +44,7 @@
         <div class="booking-form">
             <div id="shuttle-booking-form">
                 <h2>Book your airport shuttle today!</h2>
-                <p>we offer cheap and reliable transport to and from the airport</p>
+                <p>We offer affordable and reliable transport to and from the Hosea Kutako International airport</p>
                 <br>
                 <form action="reserver.shuttle" method="POST">
                     <div class="cient-details">
@@ -60,23 +60,23 @@
                         <input type="number" id="number_of_passengers" name="number_of_passengers" placeholder="4" min="1" max="11" required>
                     </div>
                     <div class="cient-details">
-                        <label for="date">Pick up time</label>
+                        <label for="date">Pick up time:</label>
                         <input type="datetime-local" id="date" name="passenger_pickup_time" placeholder="" required>
                     </div>
                     <div class="cient-details">
-                        <label for="drop_city">Drop-off Details(city)</label>
+                        <label for="drop_city">Drop-off Details(city):</label>
                         <input type="city" id="drop_city" name="drop_off_city" placeholder="City" required>
                     </div>
                     <div class="cient-details">
-                        <label for="drop_street">Drop-off Details(street)</label>
+                        <label for="drop_street">Drop-off Details(street):</label>
                         <input type="street" id="drop_street" name="drop_off_street" placeholder="Street" required>
                     </div>
                     <div class="cient-details">
-                        <label for="drop_address">Hotel Name or House No;</label>
+                        <label for="drop_address">Hotel Name or House No:</label>
                         <input type="text" id="drop_address" name="passenger_final destination" placeholder="Hotel Name or House No" required>
                     </div>
                     <div class="cient-details">
-                        <button type="submit">Book The Rooms</button>
+                        <button type="submit">Book Transport</button>
                     </div>
                 </form>
             </div>
