add style to text positions

--- a/attractions.html
+++ b/attractions.html
@@ -47,41 +47,40 @@
         <div id="attractions-text">
             <h2>Namibian Attractions</h2>
             <p>Namibia has many attractions to offer! With a vast landscape, diverser wildlife, multiple cultures, and
-                amazing sunsets.The must see places are: Swakopmund, Windhoek, and Etosha</p>
+                amazing sunsets.
+                <br>
+                The must see places are:</p>
         </div>
 
-        <hr>
-
-        <div id="attractions-main">
-
-            <div class="etosha">
-                <h2>Etosha</h2>
-                <p> Ave Temperature: 30º C</p>
-                <br>
-                <p>Ave Humidity: 12%</p>
-                <br>
-                <p>Mostly Sunny</p>
-            </div>
-    
-            <div class="windhoek" >
-                <h2>Windhoek</h2>
-                <p> Season: Summer</p>
-                <br>
-                <p>Month: December/January</p>
-                <br>
-                <p>But every season comes with its own gems</p>
-            </div>
-
-    
-            <div class="swakopmund">
-                <h2>Swakopmund</h2>
-                <p> Coordinates: 22.9576° S, 18.4904° E</p>
-                <br>
-                <p>Continent: Africa</p>
-                <br>
-                <p>Region: SADC (Southern African Development Community) </p>
-            </div>
+        <div class="etosha">
+            <h2>Etosha</h2>
+            <p> Type: Wildlife Reserve</p>
+            <br>
+            <p>Location: Northern Namibia</p>
+            <br>
+            <p>Main Attractions: Lions, Rhinons
+                <br> and Cheetahs</p>
         </div>
+
+        <div class="windhoek">
+            <h2>Windhoek</h2>
+            <p> Type: Capital City</p>
+            <br>
+            <p>Location: Northern Namibia</p>
+            <br>
+            <p>Main Attractions: Joes Beer House, Independence Museum, and Kapana (Single quaters/meat market)</p>
+        </div>
+
+        <div class="swakopmund">
+            <h2>Swakopmund</h2>
+            <h2>Windhoek</h2>
+            <p> Type: Capital City</p>
+            <br>
+            <p>Location: Northern Namibia</p>
+            <br>
+            <p>Main Attractions: Desert, Ocean and Architeur</p>
+        </div>
+
 
     </section>
 
