--- a/gallery.html
+++ b/gallery.html
@@ -48,7 +48,13 @@
             <div id="gallery-text">
                 <h2>this is the gallery</h2>
                 <p>Namibia is know to be one of the most beautiful places on earth!
-                    Enjoy these pictures by Inotila Nghaamwa show some of the gems that Namibia has to offer</p>
+                    <br>
+                    Many internationally recoginized
+                    photographers visit Namibia for this very reason. 
+                    <br> 
+                    It is worth noting that no picture can capture the true beauty of Namibia, but for now, 
+                    <br>
+                    enjoy these pictures by Inotila Nghaamwa thatshow some of the gems that Namibia has to offer.
             </div>
 
 
