--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
             </div>
 
             <div id="gallery-text">
-                <h2>this is the gallery</h2>
+                <h2> gallery</h2>
                 <p>Namibia is know to be one of the most beautiful places on earth!
                     <br>
                     Many internationally recoginized
