add alt text and one image

--- a/gallery.html
+++ b/gallery.html
@@ -62,31 +62,31 @@
                 <div class="gallery-photos">
                     <div class="row">
                         <img src="assets/images/Webp.net-resizeimage (1).jpg" alt="a rhino in the wild">
-                        <img src="assets/images/Webp.net-resizeimage (2).jpg" alt="a spider on a spider web">
-                        <img src="assets/images/Webp.net-resizeimage (3).jpg" alt="henya taking bath at a waterwhole">
+                        <img src="assets/images/Webp.net-resizeimage (2).jpg" alt="pale chanting goshawk on a branch ">
+                        <img src="assets/images/Webp.net-resizeimage (3).jpg" alt="henya and a girrafe dronking at the waterhole">
                     </div>
                     <div class="row">
-                        <img src="assets/images/Webp.net-resizeimage (4).jpg" alt="pale chanting goshawk on a branch">
-                        <img src="assets/images/Webp.net-resizeimage (5).jpg" alt="spring-bok at the waterwhole">
-                        <img src="assets/images/Webp.net-resizeimage (6).jpg" alt="Mountains">
-                    </div>
-
-                    <div class="row">
-                        <img src="assets/images/Webp.net-resizeimage (7).jpg" alt="Mountains">
-                        <img src="assets/images/Webp.net-resizeimage (8).jpg" alt="Mountains">
-                        <img src="assets/images/Webp.net-resizeimage (9).jpg" alt="Mountains">
+                        <img src="assets/images/Webp.net-resizeimage (4).jpg" alt=" two cheetahs walking in long grass with Zebra's in the background">
+                        <img src="assets/images/Webp.net-resizeimage (5).jpg" alt="local himbaa women walking home with their childeren">
+                        <img src="assets/images/Webp.net-resizeimage (6).jpg" alt="a spider on it's web">
                     </div>
 
                     <div class="row">
-                        <img src="assets/images/Webp.net-resizeimage (10).jpg" alt="Mountains">
-                        <img src="assets/images/Webp.net-resizeimage (11).jpg" alt="Mountains">
-                        <!-- <img src="assets/images/Webp.net-resizeimage (12.jpg" alt="Mountains"> -->
+                        <img src="assets/images/Webp.net-resizeimage (7).jpg" alt="spring-bok at the waterwhole">
+                        <img src="assets/images/Webp.net-resizeimage (8).jpg" alt="a rhino standing in etosha national park">
+                        <img src="assets/images/Webp.net-resizeimage (9).jpg" alt="wild animals gathered at a waterhole">
                     </div>
 
                     <div class="row">
-                        <img src="assets/images/Webp.net-resizeimage (13).jpg" alt="Mountains">
-                        <img src="assets/images/Webp.net-resizeimage (14).jpg" alt="Mountains">
-                        <img src="assets/images/Webp.net-resizeimage.jpg" alt="Mountains">
+                        <img src="assets/images/Webp.net-resizeimage (10).jpg" alt="a baby girrafe drinking water while a predator looks on">
+                        <img src="assets/images/Webp.net-resizeimage (11).jpg" alt="spring-bok and a heyna look at each other">
+                        <img src="assets/images/Webp.net-resizeimage (15).jpg" alt="a herd of oryx eating grass">
+                    </div>
+
+                    <div class="row">
+                        <img src="assets/images/Webp.net-resizeimage (13).jpg" alt="spring-bok and a heyna look at each other">
+                        <img src="assets/images/Webp.net-resizeimage (14).jpg" alt="the sunsets behind moauntains in Windhoek">
+                        <img src="assets/images/Webp.net-resizeimage.jpg" alt="a rhino standing in etosha national park">
                     </div>
                 </div>
 
